--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
@@ -18,6 +19,7 @@
     "firebase-admin": "^10.0.1",
     "mercadopago": "^2.2.0",
     "morgan": "^1.10.0",
+    "stripe": "^17.7.0",
     "uuid": "^11.0.4"
   },
   "devDependencies": {
